--- a/css/index_desktop.css
+++ b/css/index_desktop.css
@@ -5,7 +5,7 @@ body{
 }
 main{
     width: 85%;
-
+    justify-items: center;
 }
 
 .sect-img-hello{
@@ -16,6 +16,8 @@ main{
 .hello{
     margin-right: 15rem;
     width: 40vw;
+    height: auto;
+    min-width: 10rem;
 }
 
 .photo_redes{
@@ -33,9 +35,7 @@ main{
     height: 270px;
 }
 
-.photo_profile img{
-    border: 0.2rem solid transparent;
-}
+
 .redes-cv{
     margin-right: 4rem;
 }
@@ -49,11 +49,14 @@ main{
 .skills{
     order: 0;
     width: 40%;
+    margin: 2rem 2rem;
+    margin-bottom: 0rem;
+
 }
 
 .proyectos{
     order : 1;
-    width: 60%;
+    width: 55%;
     height: auto;
 }
 
@@ -61,12 +64,14 @@ main{
     order: 2;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
 .about-me,.education, .awards{
     order: 2;
-    width: 50%;
+    width: 32%;
     min-width: 10vw;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
 }
 
