--- a/css/index.css
+++ b/css/index.css
@@ -217,11 +217,12 @@ p{
     padding-left: 3rem;
     border: var(--border);
     border-radius: var(--border-radius);
-    line-height: 2.4rem;
     margin-bottom: 2rem;
 }
 
-
+ul li{
+    margin-bottom: 1rem;
+}
 ul span{
     font-style: oblique;
     font-size: var(--font-size-bold);
